--- a/index.html
+++ b/index.html
@@ -7,24 +7,47 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #333;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            transform: rotate(90deg);
+            transform-origin: center;
+        }
+        #container {
             text-align: center;
-            background-color: #f0f0f0;
+            width: 80%;
+            max-width: 400px;
         }
         #tema {
             font-size: 24px;
-            margin: 20px;
+            margin: 20px 0;
         }
         button {
             padding: 10px 20px;
             font-size: 18px;
             cursor: pointer;
+            background-color: #add8e6;
+            color: #000;
+            border: none;
+            border-radius: 5px;
+        }
+        #counter {
+            font-size: 12px;
+            color: #ccc;
+            margin-left: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Tapple Tema Acak</h1>
-    <div id="tema">Klik tombol di bawah untuk mendapatkan tema!</div>
-    <button id="acakTema">Acak Tema</button>
+    <div id="container">
+        <div id="tema">Klik tombol di bawah untuk mendapatkan tema!</div>
+        <button id="acakTema">Acak Tema</button>
+        <span id="counter">0/5</span>
+    </div>
 
     <script>
         const temaList = [
@@ -37,10 +60,14 @@
 
         const temaElement = document.getElementById('tema');
         const acakTemaButton = document.getElementById('acakTema');
+        const counterElement = document.getElementById('counter');
+
+        let currentTemaIndex = 0;
 
         acakTemaButton.addEventListener('click', () => {
-            const randomIndex = Math.floor(Math.random() * temaList.length);
-            temaElement.textContent = temaList[randomIndex];
+            currentTemaIndex = (currentTemaIndex + 1) % temaList.length;
+            temaElement.textContent = temaList[currentTemaIndex];
+            counterElement.textContent = `${currentTemaIndex + 1}/${temaList.length}`;
         });
     </script>
 </body>
