--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
             padding: 15px 30px;
             font-size: 24px;
             cursor: pointer;
-            background-color: #add8e6;
-            color: #000;
+            background-color: #007bff;
+            color: #fff;
             border: none;
             border-radius: 10px;
         }
         #counter {
-            font-size: 18px;
+            font-size: 14px;
+            color: #ccc;
+            margin-left: 10px;
+        }
+        #keterangan {
+            font-size: 12px;
             color: #ccc;
             margin-top: 10px;
         }
@@ -46,8 +51,8 @@
 <body>
     <div id="container">
         <div id="tema"></div>
-        <button id="acakTema">Acak Tema</button>
-        <div id="counter">1/10</div>
+        <button id="acakTema">Acak Tema <span id="counter">1/20</span></button>
+        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com</div>
     </div>
 
     <script>
@@ -61,7 +66,17 @@
             "Warna favorit",
             "Negara di Asia",
             "Olahraga populer",
-            "Alat musik"
+            "Alat musik",
+            "Jenis tansportasi",
+            "Hobi anak muda",
+            "Makanan khas Indonesia",
+            "Pahlawan nasional",
+            "Tempat wisata di Indonesia",
+            "Jenis olahraga air",
+            "Buku favorit",
+            "Film populer",
+            "Jenis hewan laut",
+            "Kota di Indonesia"
         ];
 
         const temaElement = document.getElementById('tema');
