Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="container">
         <div id="tema"></div>
         <button id="acakTema">Acak Tema <span id="counter">1/20</span></button>
-        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com</div>
+        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com | 2026</div>
     </div>
 
     <script>
