--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             font-size: 14px;
             color: #ccc;
             margin-left: 10px;
+            display: inline-block;
         }
         #keterangan {
             font-size: 12px;
@@ -51,8 +52,8 @@
 <body>
     <div id="container">
         <div id="tema"></div>
-        <button id="acakTema">Acak Tema <span id="counter">1/20</span></button>
-        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com | 2026</div>
+        <button id="acakTema">Acak Tema</button> <span id="counter">1/30</span>
+        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com</div>
     </div>
 
     <script>
@@ -76,7 +77,17 @@
             "Buku favorit",
             "Film populer",
             "Jenis hewan laut",
-            "Kota di Indonesia"
+            "Kota di Indonesia",
+            "Benda warna merah",
+            "Benda yang ada di mesjid",
+            "Benda warna putih",
+            "Yang baunya wangi",
+            "Nama negara di dunia",
+            "Hewan peliharaan",
+            "Makanan pedas",
+            "Jenis tansportasi udara",
+            "Tempat wisata di luar negeri",
+            "Jenis olahraga ekstrem"
         ];
 
         const temaElement = document.getElementById('tema');
