--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="container">
         <div id="tema"></div>
         <button id="acakTema">Acak Tema</button> <span id="counter">1/30</span>
-        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com</div>
+        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com | 2026</div>
     </div>
 
     <script>
