--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
             margin: 0;
             transform: rotate(90deg);
             transform-origin: center;
+            overflow: hidden;
         }
         #container {
             text-align: center;
             width: 90%;
             max-width: 400px;
+            position: relative;
         }
         #tema {
-            font-size: 36px;
+            font-size: 40px;
             font-weight: bold;
             margin: 20px 0;
         }
         button {
-            padding: 15px 30px;
-            font-size: 24px;
+            padding: 10px 20px;
+            font-size: 20px;
             cursor: pointer;
             background-color: #007bff;
             color: #fff;
