--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <script>
         const temaList = [
-            "Nama binatang yang hidup di darat",
+            "Binatang yang hidup di darat",
             "Buah berwarna merah",
             "Makanan yang rasanya manis",
             "Benda yang ada di pasar",
@@ -89,7 +89,16 @@
             "Makanan pedas",
             "Jenis tansportasi udara",
             "Tempat wisata di luar negeri",
-            "Jenis olahraga ekstrem"
+            "Jenis olahraga ekstrem",
+            "Binatang yang hidup di air",
+            "Binatang yang suaranya berisik",
+            "Makanan yang manis",
+            "Nama-nama pulau",
+            "Nama perempuan yang ngetrend",
+            "Kota di pulau jawa",
+            "Bahasa yang tidak menggunakan huruf latin",
+            "Binatang yang hidup di hutan"
+   
         ];
 
         const temaElement = document.getElementById('tema');
