--- a/index.html
+++ b/index.html
@@ -20,14 +20,27 @@
         }
         #container {
             text-align: center;
-            width: 90%;
-            max-width: 400px;
+            width: 100%;
+            height: 100%;
             position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        #counter {
+            font-size: 14px;
+            color: #ccc;
+            position: absolute;
+            top: 20px;
+            right: 20px;
         }
         #tema {
             font-size: 40px;
             font-weight: bold;
-            margin: 20px 0;
+            margin: 20px;
+            padding: 0 20px;
+            width: 90%;
         }
         button {
             padding: 10px 20px;
@@ -38,23 +51,20 @@
             border: none;
             border-radius: 10px;
         }
-        #counter {
-            font-size: 14px;
-            color: #ccc;
-            margin-left: 10px;
-            display: inline-block;
-        }
         #keterangan {
             font-size: 12px;
             color: #ccc;
             margin-top: 10px;
+            position: absolute;
+            bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div id="container">
+        <span id="counter">1/30</span>
         <div id="tema"></div>
-        <button id="acakTema">Acak Tema</button> <span id="counter">1/30</span>
+        <button id="acakTema">Acak Tema</button>
         <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com | 2026</div>
     </div>
 
@@ -98,7 +108,6 @@
             "Kota di pulau jawa",
             "Bahasa yang tidak menggunakan huruf latin",
             "Binatang yang hidup di hutan"
-   
         ];
 
         const temaElement = document.getElementById('tema');
