--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             color: #ccc;
             position: absolute;
             top: 20px;
-            right: 20px;
+            left: 50%;
+            transform: translateX(-50%);
         }
         #tema {
             font-size: 40px;
@@ -54,18 +55,19 @@
         #keterangan {
             font-size: 12px;
             color: #ccc;
-            margin-top: 10px;
             position: absolute;
             bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
         }
     </style>
 </head>
 <body>
     <div id="container">
-        <span id="counter">1/30</span>
+        <span id="counter">1/38</span>
         <div id="tema"></div>
         <button id="acakTema">Acak Tema</button>
-        <div id="keterangan">IG : @ukiek | Email : syaukidear@gmail.com | 2026</div>
+        <div id="keterangan">IG : @ukiek | 2026</div>
     </div>
 
     <script>
