--- a/index.html
+++ b/index.html
@@ -121,25 +121,30 @@
             "Pahlawan nasional",
             "Tempat wisata di Indonesia",
             "Jenis olahraga air",
-            "Buku favorit",
+            "Nama acara TV",
             "Film populer",
             "Jenis hewan laut",
             "Kota di Indonesia",
             "Benda warna merah",
-            "Benda yang ada di mesjid",
+            "Yang ada di mesjid",
             "Benda warna putih",
             "Yang baunya wangi",
             "Nama negara di dunia",
             "Hewan peliharaan",
             "Makanan pedas",
-            "Jenis transportasi udara",
+            "Transportasi udara",
             "Tempat wisata di luar negeri",
             "Jenis olahraga ekstrem",
             "Binatang yang hidup di air",
             "Binatang yang suaranya berisik",
             "Makanan yang manis",
             "Nama-nama pulau",
-            "Nama perempuan yang ngetrend",
+            "Nama ngetrend perempuan",
+            "Nama jalan",
+            "Tempat nongkrong",
+            "Kesukaan kucing",
+            "Kegiatan weekend",
+            "Yang ada di meja belajar",
             "Kota di pulau jawa",
             "Bahasa yang tidak menggunakan huruf latin",
             "Binatang yang hidup di hutan"
