--- a/index.html
+++ b/index.html
@@ -105,22 +105,23 @@
 
     <script>
         const temaListMaster = [
-            "Binatang yang hidup di darat",
+            "Binatang hidup di darat",
             "Buah berwarna merah",
-            "Makanan yang rasanya manis",
-            "Benda yang ada di pasar",
-            "Hewan yang bisa terbang",
-            "Bunga yang indah",
-            "Warna favorit",
+            "Makanan rasanya manis",
+            "Yang ada di pasar",
+            "Binatang bisa terbang",
+            "Nama bunga",
+            "Nama warna",
             "Negara di Asia",
-            "Olahraga populer",
+            "Olahraga di sekolah",
             "Alat musik",
             "Jenis transportasi",
-            "Hobi anak muda",
+            "Yang berisik di jalan",
             "Makanan khas Indonesia",
             "Pahlawan nasional",
-            "Tempat wisata di Indonesia",
-            "Jenis olahraga air",
+            "Ada pas Lebaran",
+            "Tempat wisata Indonesia",
+            "Olahraga dengan bola",
             "Nama acara TV",
             "Film populer",
             "Jenis hewan laut",
@@ -133,21 +134,22 @@
             "Hewan peliharaan",
             "Makanan pedas",
             "Transportasi udara",
-            "Tempat wisata di luar negeri",
-            "Jenis olahraga ekstrem",
-            "Binatang yang hidup di air",
-            "Binatang yang suaranya berisik",
+            "Tempat wisata luar negeri",
+            "Olahraga ekstrem",
+            "Binatang hidup di air",
+            "Binatang suaranya berisik",
             "Makanan yang manis",
             "Nama-nama pulau",
             "Nama ngetrend perempuan",
             "Nama jalan",
+            "Buah warna hijau",
             "Tempat nongkrong",
             "Kesukaan kucing",
             "Kegiatan weekend",
             "Yang ada di meja belajar",
             "Kota di pulau jawa",
-            "Bahasa yang tidak menggunakan huruf latin",
-            "Binatang yang hidup di hutan"
+            "Bahasa di Asia",
+            "Yang hidup di hutan"
         ];
 
         let sisaTema = [];
